# mcp_static_toolgen

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: ci.yml  publish.yml
src/example/: mcp.py
src/mcp_static_toolgen/: common.py  mcp.py
src/mcp_static_toolgen/example/: mcp.py
src/mcp_static_toolgen/runtime/: common.py  langchain.py
src/mcp_static_toolgen/templates/langchain/: mcp_tools.py.j2
src/mcp_static_toolgen/tests/: test_mcp.py
src/mcp_toolgen/: main.py  mcp.py
src/mcp_toolgen/example/: mcp.py
src/mcp_toolgen/templates/langchain/: mcp_tools.py.j2
src/mcp_toolgen/tests/: mock_mcp_server.py  test_mcp.py
src/mcp_toolgen/tests/__snapshots__/: test_mcp.ambr
src/tests/: test_mcp.py
src/tests/__snapshots__/: test_mcp.ambr
