[project]
name = "mcp_toolgen"
version = "0.1.0"
description = "Static binding code generator for MCP tools"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "hyranno", email = "hyranno4pub@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.12",
    "langchain-mcp-adapters>=0.2.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "syrupy>=5.1.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "ANN",  # flake8-annotations
    "C90",  # mccabe
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = []
